# arpes

./: .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  .readthedocs.yml  AUTHORS.md  Changes.md  MANIFEST.in  README.md  README.rst  TODO.md  environment-readthedocs.yml  environment.yml  lefthook.yml  package-lock.json  pyproject.toml  setup.py
.git-hooks/: pre-push
.github/: copilot-instructions.md
.github/workflows/: black.yml  publish.yml  python-app.yml  ruff.yml  test.yml
arpes/: __init__.py  _typing.py  all.py  all_imports  bootstrap.py  config.py  constants.py  exceptions.py  io.py  laser.py  load_pxt.py  optics.py  provenance.py  repair.py  simulation.py  trace.py  typing.py  widgets.py  workflow.py  xarray_extensions.py
arpes/analysis/: __init__.py  align.py  all.py  background.py  band_analysis.py  band_analysis_utils.py  decomposition.py  deconvolution.py  derivative.py  filters.py  gap.py  general.py  kfermi.py  mask.py  moire.py  path.py  pocket.py  resolution.py  sarpes.py  savitzky_golay.py  self_energy.py  shirley.py  statistics.py  tarpes.py  xps.py
arpes/corrections/: __init__.py  background.py  fermi_edge_corrections.py
arpes/deep_learning/: formatters.py  interpret.py  io.py  transforms.py
arpes/deep_learning/models/: regression.py
arpes/endstations/: __init__.py  fits_utils.py  igor_utils.py  nexus_utils.py  prodigy_itx.py  prodigy_xy.py
arpes/endstations/plugin/: ALG_main.py  ALG_spin_ToF.py  ANTARES.py  BL10_SARPES.py  Elettra_spectromicroscopy.py  HERS.py  IF_UMCS.py  MAESTRO.py  MBS.py  SPD_main.py  SSRF_NSRL.py  SToF_DLD.py  example_data.py  fallback.py  igor_export.py  igor_plugin.py  kaindl.py  merlin.py  prodigy_itx.py
arpes/example_data/: GrIr_111_20230410_1.sp2  example_itx_data.itx
arpes/experiment/: __init__.py
arpes/fits/: __init__.py  broadcast_common.py  hot_pool.py  lmfit_html_repr.py  lmfit_plot.py  mp_fits.py  utilities.py  zones.py
arpes/fits/fit_models/: __init__.py  backgrounds.py  decay.py  dirac.py  fermi_edge.py  functional_forms.py  misc.py  peaks.py  two_dimensional.py  wrapped.py  x_model_mixin.py
arpes/laue/: __init__.py
arpes/models/: __init__.py  band.py
arpes/plotting/: __init__.py  all.py  annotations.py  band_tool.py  bands.py  basic.py  bz.py  comparison_tool.py  curvature_tool.py  dispersion.py  dos.py  dyn_tool.py  dynamic_tool.py  false_color.py  fermi_edge.py  fermi_surface.py  fit_inspection_tool.py  fits.py  interactive.py  interactive_utils.py  mask_tool.py  movie.py  parameter.py  path_tool.py  spatial.py  spin.py  stack_plot.py  tof.py  utils.py
arpes/plotting/basic_tools/: __init__.py
arpes/plotting/bz_tool/: CoordinateOffsetWidget.py  RangeOrSingleValueWidget.py  __init__.py
arpes/plotting/fit_tool/: __init__.py  fit_inspection_plot.py
arpes/plotting/qt_ktool/: __init__.py
arpes/plotting/qt_tool/: AxisInfoWidget.py  BinningInfoWidget.py  __init__.py
arpes/preparation/: __init__.py  axis_preparation.py  coord_preparation.py  hemisphere_preparation.py  tof_preparation.py
arpes/utilities/: __init__.py  attrs.py  bz.py  bz_spec.py  collections.py  combine.py  dict.py  excepthook.py  funcutils.py  geometry.py  image.py  jupyter.py  math.py  montage.py  normalize.py  region.py  selections.py  string.py  transform.py  ui.py  widgets.py  xarray.py
arpes/utilities/conversion/: __init__.py  base.py  bounds_calculations.py  calibration.py  core.py  fast_interp.py  grids.py  (+5 more)
conda/: meta.yaml
docs/: Toward_5.0.md  requirements.txt
docs/source/: 3d-cut-plots.rst  CHANGELOG.rst  Toward_5.0.rst  advanced-plotting.rst  api.rst  brillouin-zones.rst  conf.py  contributing.rst  curve-fitting.rst  customization.rst  data-provenance.rst  dev-guide.rst  faq.rst  fermi-surfaces.rst  getting-started.rst  igor-pro.rst  index.rst  installation.rst  interactive.rst  loading-data.rst  migration-guide.rst  modeling.rst  momentum-conversion.rst  plotting-utilities.rst  single-particle-spectral.rst  spectra.rst  spin-arpes.rst  stack-plots.rst  th-arpes.rst  tr-arpes.rst  writing-interactive-tools.rst  writing-plugins-basic.rst  writing-plugins.rst  xarray_extensions.rst
legacy_files/: dynamic_tool.py  environment-readthedocs.yml  environment-update-test.yml  lmfit_html_repr.py  package.json  peaks.py  test_qt.py  widgets.py
legacy_files/conda/: run_test.py
legacy_files/laue/: __init__.py
legacy_files/scripts/: open_pyqtgraph_examples.py  try_qt_tool.py
legacy_files/utilities/: transform.py  widgets.py
pytest-config/: pytest-coverage-codecov.ini  pytest-coverage.ini  pytest.ini
resources/example_configuration/: local_config.example.py
scripts/: build_docs.py  catchup.py  crash_dill.py  test_basic_tool.py  test_dynamic_tool.py  test_ktool.py  test_qt_tool.py  try_bz_tool.py  try_dynamic_tool.py  try_ktool.py  try_qt_tool.py
src/arpes/: __init__.py  _typing.py  bootstrap.py  check.py  config.py  constants.py  debug.py  exceptions.py  io.py  laser.py  load_pxt.py  optics.py  plugin_loader.py  provenance.py  repair.py  setting.py  simulation.py  widgets.py  workflow.py  xarray_extensions.py
tests/: conftest.py  test__typing.py  test_align.py  test_analysis_background.py  test_analysis_deconvolution.py  test_analysis_filters.py  test_analysis_general.py  test_analysis_init.py  test_analysis_mask.py  test_analysis_xps.py  test_axis_preparation.py  test_band_analysis_utils.py  test_basic_data_loading.py  test_bounds_calculation.py  test_bz.py  test_bz_spec.py  test_config.py  test_config_manager.py  test_configuration_interface.py  test_conversion_calibration.py  test_conversion_core.py  test_coords.py  test_correction_angle_unit.py  test_correction_intensity_map.py  test_curve_fitting.py  test_decomposition.py  test_derivative_analysis.py  test_direct_and_example_data_loading.py  test_endstation_fallback.py  test_endstation_registry.py  test_endstation_single_file_endstation.py  test_export_itx.py  test_fit_models.py  test_fits.py  test_fits_fermi_edge.py  test_generic_utilities.py  test_helper_in_xarray_extensions.py  test_helper_jupyter.py  test_init.py  test_io.py  (+47 more)
(+258 files in other folders)
